--- a/node-module-swc-cjs/package.json
+++ b/node-module-swc-cjs/package.json
@@ -7,7 +7,11 @@
     "swc",
     "starter"
   ],
-  "author": "Robin Hansson (https://github.com/rabinage)",
+  "author": "Robin Hansson <holla@rabinage.dev> (https://github.com/rabinage)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rabinage/starters.git"
+  },
   "license": "MIT",
   "type": "commonjs",
   "main": "./dist",
@@ -22,8 +26,8 @@
     "example:dev": "nodemon --watch example",
     "test": "node -r \"dotenv/config\" node_modules/jest/bin/jest.js",
     "lint": "npx prettier --write . && npx eslint --fix src test example",
-    "lint:check": "npx prettier --check . && npx eslint --max-warnings=0 src test example",
-    "precommit": "npm run lint:check"
+    "lintcheck": "npx prettier --check . & npx eslint --max-warnings=0 src test example",
+    "precommit": "npm run lintcheck"
   },
   "engines": {
     "node": ">=14"
