--- a/node-module-swc-esm/.github/workflows/ci.yaml
+++ b/node-module-swc-esm/.github/workflows/ci.yaml
@@ -10,16 +10,27 @@ jobs:
   code-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Read Node version
         run: echo "::set-output name=NVMRC::$(cat .nvmrc)"
         id: nvm
-      - name: Setup Node ${{ steps.nvm.outputs.NVMRC }}
+
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: ${{ steps.nvm.outputs.NVMRC }}
           cache: "npm"
-      - run: npm ci
-      - run: npm lint:check
-      - run: npm test
-      - run: npm run build
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Code check
+        run: npm run lintcheck
+
+      - name: Run tests
+        run: npm run test
+
+      - name: Run build
+        run: npm run build
