--- a/node-module-swc-esm/.github/workflows/publish.yaml
+++ b/node-module-swc-esm/.github/workflows/publish.yaml
@@ -1,36 +1,34 @@
-name: CI
+name: Publish
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  release:
+    types: [created]
 
 jobs:
-  code-check:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Read Node version
         run: echo "::set-output name=NVMRC::$(cat .nvmrc)"
         id: nvm
 
-      - name: Setup Node
+      - name: Setup Node ${{ steps.nvm.outputs.NVMRC }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ steps.nvm.outputs.NVMRC }}
           cache: "npm"
+          registry-url: "https://registry.npmjs.org/"
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Code check
-        run: npm run lintcheck
-
-      - name: Run tests
-        run: npm run test
-
       - name: Run build
         run: npm run build
+
+      - name: Publish package on NPM
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
