--- a/node-module-swc-esm/.gitignore
+++ b/node-module-swc-esm/.gitignore
@@ -41,10 +41,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
-# Build / generate output
-dist/
-lib/
-
 # Dependency directories
 node_modules/
 
@@ -73,3 +69,10 @@ node_modules/
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+# Project specific
+
+# Build / generate output
+dist/
+lib/
