--- a/node-module-swc-esm/package.json
+++ b/node-module-swc-esm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-module-swc-esm",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A starter for writing ESM compatible and production ready Nodejs modules using the latest ECMAScript syntax.",
   "keywords": [
     "nodejs",
@@ -9,13 +9,16 @@
     "starter",
     "esnext"
   ],
-  "author": "Robin Hansson (https://github.com/rabinage)",
+  "author": "Robin Hansson <holla@rabinage.dev> (https://github.com/rabinage)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rabinage/starters.git"
+  },
   "license": "MIT",
   "type": "module",
   "typings": "./index.d.ts",
   "exports": {
-    ".": "./dist",
-    "./index.d.ts": "./index.d.ts"
+    ".": "./dist"
   },
   "scripts": {
     "start": "node dist/index.js",
@@ -23,8 +26,8 @@
     "example:dev": "nodemon --watch example",
     "test": "node --experimental-vm-modules --no-warnings -r \"dotenv/config\" node_modules/jest/bin/jest.js",
     "lint": "npx prettier --write . && npx eslint --fix src test example",
-    "lint:check": "npx prettier --check . & npx eslint --max-warnings=0 src test example",
-    "precommit": "npm run lint:check"
+    "lintcheck": "npx prettier --check . & npx eslint --max-warnings=0 src test example",
+    "precommit": "npm run lintcheck"
   },
   "engines": {
     "node": ">=16"
